data/derived/sp14/progs/unify/prog4028.ml.out
Characters 8-14:
  let x = "1234"
          ^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
